terraform/infra/s3.tf
resource "aws_security_group" "super_important_group" {
  description = "this is very important group"
  tags = {
    "Name" = "SUPER IMPORTANT KIZICH"
  }
}
